<resources>
    <string name="app_name">K2DBinaryWatch</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="twentyExample">0101</string>
    <string name="sixtyExample">010101</string>
    <string name="seconds">Seconds</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>