<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextHeaders"
        android:text="@string/hours" />

    <TextView
        android:id="@+id/hoursNumbers"
        style="@style/TextNumbers"
        tools:text="@string/twentyExample" />

    <TextView
        style="@style/TextHeaders"
        android:text="@string/minutes" />

    <TextView
        android:id="@+id/minutesNumbers"
        style="@style/TextNumbers"
        tools:text="@string/sixtyExample" />

    <TextView
        style="@style/TextHeaders"
        android:text="@string/seconds" />

    <TextView
        android:id="@+id/secondsNumbers"
        style="@style/TextNumbers"
        tools:text="@string/sixtyExample" />
</LinearLayout>